; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_effect.c_d3dx9_base_effect_set_matrix_array.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_effect.c_d3dx9_base_effect_set_matrix_array.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.d3dx9_base_effect = type { i32 }
%struct.d3dx_parameter = type { i64, i32, i32* }

@.str = private unnamed_addr constant [10 x i8] c"Class %s\0A\00", align 1
@D3D_OK = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [20 x i8] c"Unhandled class %s\0A\00", align 1
@.str.2 = private unnamed_addr constant [22 x i8] c"Parameter not found.\0A\00", align 1
@D3DERR_INVALIDCALL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.d3dx9_base_effect*, i32, i32*, i64)* @d3dx9_base_effect_set_matrix_array to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @d3dx9_base_effect_set_matrix_array(%struct.d3dx9_base_effect* %0, i32 %1, i32* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.d3dx9_base_effect*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i64, align 8
  %10 = alloca %struct.d3dx_parameter*, align 8
  %11 = alloca i64, align 8
  store %struct.d3dx9_base_effect* %0, %struct.d3dx9_base_effect** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i64 %3, i64* %9, align 8
  %12 = load %struct.d3dx9_base_effect*, %struct.d3dx9_base_effect** %6, align 8
  %13 = load i32, i32* %7, align 4
  %14 = call %struct.d3dx_parameter* @get_valid_parameter(%struct.d3dx9_base_effect* %12, i32 %13)
  store %struct.d3dx_parameter* %14, %struct.d3dx_parameter** %10, align 8
  %15 = load %struct.d3dx_parameter*, %struct.d3dx_parameter** %10, align 8
  %16 = icmp ne %struct.d3dx_parameter* %15, null
  br i1 %16, label %17, label %62

17:                                               ; preds = %4
  %18 = load %struct.d3dx_parameter*, %struct.d3dx_parameter** %10, align 8
  %19 = getelementptr inbounds %struct.d3dx_parameter, %struct.d3dx_parameter* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = load i64, i64* %9, align 8
  %22 = icmp sge i64 %20, %21
  br i1 %22, label %23, label %62

23:                                               ; preds = %17
  %24 = load %struct.d3dx_parameter*, %struct.d3dx_parameter** %10, align 8
  %25 = getelementptr inbounds %struct.d3dx_parameter, %struct.d3dx_parameter* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 8
  %27 = call i32 @debug_d3dxparameter_class(i32 %26)
  %28 = call i32 @TRACE(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %27)
  %29 = load %struct.d3dx_parameter*, %struct.d3dx_parameter** %10, align 8
  %30 = getelementptr inbounds %struct.d3dx_parameter, %struct.d3dx_parameter* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 8
  switch i32 %31, label %55 [
    i32 132, label %32
    i32 130, label %54
    i32 128, label %54
    i32 131, label %54
    i32 129, label %54
  ]

32:                                               ; preds = %23
  %33 = load %struct.d3dx_parameter*, %struct.d3dx_parameter** %10, align 8
  %34 = call i32 @set_dirty(%struct.d3dx_parameter* %33)
  store i64 0, i64* %11, align 8
  br label %35

35:                                               ; preds = %49, %32
  %36 = load i64, i64* %11, align 8
  %37 = load i64, i64* %9, align 8
  %38 = icmp slt i64 %36, %37
  br i1 %38, label %39, label %52

39:                                               ; preds = %35
  %40 = load %struct.d3dx_parameter*, %struct.d3dx_parameter** %10, align 8
  %41 = getelementptr inbounds %struct.d3dx_parameter, %struct.d3dx_parameter* %40, i32 0, i32 2
  %42 = load i32*, i32** %41, align 8
  %43 = load i64, i64* %11, align 8
  %44 = getelementptr inbounds i32, i32* %42, i64 %43
  %45 = load i32*, i32** %8, align 8
  %46 = load i64, i64* %11, align 8
  %47 = getelementptr inbounds i32, i32* %45, i64 %46
  %48 = call i32 @set_matrix(i32* %44, i32* %47)
  br label %49

49:                                               ; preds = %39
  %50 = load i64, i64* %11, align 8
  %51 = add nsw i64 %50, 1
  store i64 %51, i64* %11, align 8
  br label %35

52:                                               ; preds = %35
  %53 = load i32, i32* @D3D_OK, align 4
  store i32 %53, i32* %5, align 4
  br label %65

54:                                               ; preds = %23, %23, %23, %23
  br label %61

55:                                               ; preds = %23
  %56 = load %struct.d3dx_parameter*, %struct.d3dx_parameter** %10, align 8
  %57 = getelementptr inbounds %struct.d3dx_parameter, %struct.d3dx_parameter* %56, i32 0, i32 1
  %58 = load i32, i32* %57, align 8
  %59 = call i32 @debug_d3dxparameter_class(i32 %58)
  %60 = call i32 @FIXME(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0), i32 %59)
  br label %61

61:                                               ; preds = %55, %54
  br label %62

62:                                               ; preds = %61, %17, %4
  %63 = call i32 @WARN(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.2, i64 0, i64 0))
  %64 = load i32, i32* @D3DERR_INVALIDCALL, align 4
  store i32 %64, i32* %5, align 4
  br label %65

65:                                               ; preds = %62, %52
  %66 = load i32, i32* %5, align 4
  ret i32 %66
}

declare dso_local %struct.d3dx_parameter* @get_valid_parameter(%struct.d3dx9_base_effect*, i32) #1

declare dso_local i32 @TRACE(i8*, i32) #1

declare dso_local i32 @debug_d3dxparameter_class(i32) #1

declare dso_local i32 @set_dirty(%struct.d3dx_parameter*) #1

declare dso_local i32 @set_matrix(i32*, i32*) #1

declare dso_local i32 @FIXME(i8*, i32) #1

declare dso_local i32 @WARN(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
